--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.0",
+    "nanoid": "^5.0.4",
     "next": "14.1.0",
     "pako": "^2.1.0",
     "qrcode.react": "^3.1.0",
